updating main title block

--- a/Money_Laundering_Notebook.ipynb
+++ b/Money_Laundering_Notebook.ipynb
@@ -12,20 +12,19 @@
     "\n",
     "These data sets contain various amounts of data dating till 2013, with various levels of information that is captured from financial entities.\n",
     "\n",
-    "@Article{Hunter:2007,\n",
-    "  Author    = {Hunter, J. D.},\n",
-    "  Title     = {Matplotlib: A 2D graphics environment},\n",
-    "  Journal   = {Computing in Science \\& Engineering},\n",
-    "  Volume    = {9},\n",
-    "  Number    = {3},\n",
-    "  Pages     = {90--95},\n",
-    "  abstract  = {Matplotlib is a 2D graphics package used for Python for\n",
-    "  application development, interactive scripting, and publication-quality\n",
-    "  image generation across user interfaces and operating systems.},\n",
-    "  publisher = {IEEE COMPUTER SOC},\n",
-    "  doi       = {10.1109/MCSE.2007.55},\n",
-    "  year      = 2007\n",
-    "}"
+    "Article - Hunter:2007,\n",
+    "  - Author    = {Hunter, J. D.},\n",
+    "  - Title     = {Matplotlib: A 2D graphics environment},\n",
+    "  - Journal   = {Computing in Science \\& Engineering},\n",
+    "  - Volume    = {9},\n",
+    "  - Number    = {3},\n",
+    "  - Pages     = {90--95},\n",
+    "  - abstract  = {Matplotlib is a 2D graphics package used for Python for\n",
+    "  - application development, interactive scripting, and publication-quality\n",
+    "  - image generation across user interfaces and operating systems.},\n",
+    "  - publisher = {IEEE COMPUTER SOC},\n",
+    "  - doi       = {10.1109/MCSE.2007.55},\n",
+    "  - year      = 2007"
    ]
   },
   {
@@ -474,7 +473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
