Tried something new with the graph updates.

--- a/Money_Laundering_Notebook.ipynb
+++ b/Money_Laundering_Notebook.ipynb
@@ -62,7 +62,8 @@
     "%pip install pandas\n",
     "%pip install pyodbc\n",
     "%pip install openpyxl\n",
-    "%pip install nbformat"
+    "%pip install nbformatA\n",
+    "%pip install xlrd"
    ]
   },
   {
@@ -107,6 +108,8 @@
     "from sklearn.metrics import precision_score, recall_score, f1_score\n",
     "from sklearn.metrics import average_precision_score\n",
     "\n",
+    "import xlrd\n",
+    "\n",
     "warnings.filterwarnings('ignore')\n",
     "%matplotlib inline"
    ]
@@ -136,11 +139,8 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "#url ='https://onedrive.live.com/download?cid=4A3B8562A2CB78B3&resid=4A3B8562A2CB78B3%21158025&authkey=ACHHRI10a-phyio&em=2'\n",
     "url ='https://onedrive.live.com/download?cid=4A3B8562A2CB78B3&resid=4A3B8562A2CB78B3%21158163&authkey=AFMTDEy7Ff3oCL8'\n",
-    "#url ='https://onedrive.live.com/download?cid=4A3B8562A2CB78B3&resid=4A3B8562A2CB78B3%21158165&authkey=APswAhpzUuOs4KQ'\n",
     "\n",
-    "#df = pd.read_excel(url)\n",
     "df = pd.read_csv(url)\n",
     "df.info()"
    ]
@@ -151,7 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.head()\n"
+    "df.head()"
    ]
   },
   {
@@ -189,7 +189,7 @@
    "source": [
     "print(\"Shape of dataset:\", df.shape)\n",
     "print(\"Overview of the data:\")\n",
-    "print(df.head())\n"
+    "df.head()"
    ]
   },
   {
@@ -198,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['Is Laundering'] = df['Is Laundering'].replace({'Yes': 1, 'No':0})"
+    "df['Is Laundering'] = df['Is Laundering'].replace({1 : 'Yes', 0: 'No'})"
    ]
   },
   {
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,9 @@
     "class_counts_lau = df['Is Laundering'].value_counts()\n",
     "class_counts_percentage_lau = df['Is Laundering'].value_counts(normalize=True) * 100\n",
     "\n",
-    "print(\"Is Laundering: \\n\", class_counts_lau)"
+    "print(\"Is Laundering: \\n\", class_counts_lau)\n",
+    "df[class_counts_lau].describe().T\n",
+    "df[class_counts_percentage_lau].describe().T"
    ]
   },
   {
