--- a/Money_Laundering_Notebook.ipynb
+++ b/Money_Laundering_Notebook.ipynb
@@ -108,8 +108,6 @@
     "from sklearn.metrics import precision_score, recall_score, f1_score\n",
     "from sklearn.metrics import average_precision_score\n",
     "\n",
-    "import xlrd\n",
-    "\n",
     "warnings.filterwarnings('ignore')\n",
     "%matplotlib inline"
    ]
@@ -198,7 +196,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['Is Laundering'] = df['Is Laundering'].replace({1 : 'Yes', 0: 'No'})"
+    "df['Is Laundering'] = df['Is Laundering'].replace({1 : 'Yes', 0: 'No'})\n",
+    "df.head()"
    ]
   },
   {
@@ -239,17 +238,45 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Scans the data to search the percentages of fraud vs no fraud\n",
+    "amount = df.groupby('Is Laundering')['Is Laundering'].sum()\n",
+    "fraud, unfraud = len(df[df['Is Laundering'] == 'Yes']), len(df[df['Is Laundering'] == 'No'])\n",
+    "fraud_perc, unfraud_perc = (fraud/len(df)) * 100, (unfraud/len(df))*100\n",
+    "\n",
+    "Loss = pd.DataFrame({'Fraud' : ['Fraud', 'No Fraud'], 'Total Amount' : [amount['Yes'], amount['No']], 'Freq.' : [fraud, unfraud], '% perc.' : [fraud_perc, unfraud_perc]})\n",
+    "\n",
+    "Loss = Loss.set_index('Fraud')\n",
+    "Loss\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Scans the data to search the percentages of fraud vs no fraud\n",
-    "amount = df.groupby('Is Laundering')['Is Laundering'].sum()\n",
-    "fraud, unfraud = len(df[df['Is Laundering'] == 1]), len(df[df['Is Laundering'] == 0])\n",
-    "fraud_perc, unfraud_perc = (fraud/len(df)) * 100, (unfraud/len(df))*100\n",
+    "import pandas as pd\n",
     "\n",
-    "Loss = pd.DataFrame({'Fraud' : ['Fraud', 'No Fraud'], 'Total Amount' : [amount[1], amount[0]], 'Freq.' : [fraud, unfraud], '% perc.' : [fraud_perc, unfraud_perc]})\n",
+    "fraud_count = df['Is Laundering'].value_counts().get('Yes', 0)\n",
+    "unfraud_count = df['Is Laundering'].value_counts().get('No', 0)\n",
+    "\n",
+    "total_count = fraud_count + unfraud_count\n",
+    "\n",
+    "fraud_perc = (fraud_count / total_count) * 100\n",
+    "unfraud_perc = (unfraud_count / total_count) * 100\n",
+    "\n",
+    "Loss = pd.DataFrame({\n",
+    "    'Fraud': ['Fraud', 'No Fraud'],\n",
+    "    'Total Amount': [fraud_count, unfraud_count],\n",
+    "    'Freq.': [fraud_count, unfraud_count],\n",
+    "    '% perc.': [fraud_perc, unfraud_perc]\n",
+    "})\n",
     "\n",
     "Loss = Loss.set_index('Fraud')\n",
     "Loss"
@@ -332,18 +359,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```\n",
     "# Checks the quality of the deposit amounts in the dataset\n",
     "class_counts_lau = df['Is Laundering'].value_counts()\n",
     "class_counts_percentage_lau = df['Is Laundering'].value_counts(normalize=True) * 100\n",
     "\n",
     "print(\"Is Laundering: \\n\", class_counts_lau)\n",
-    "df[class_counts_lau].describe().T\n",
-    "df[class_counts_percentage_lau].describe().T"
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class_counts_lau = df['Is Laundering'].value_counts()\n",
+    "class_counts_percentage_lau = df['Is Laundering'].value_counts(normalize=True) * 100\n",
+    "\n",
+    "print(\"Is Laundering:\")\n",
+    "for label, count in class_counts_lau.items():\n",
+    "    percentage = class_counts_percentage_lau[label]\n",
+    "    print(f\"- {label}: Count: {count}, Percentage: {percentage:.2f}%\")\n"
    ]
   },
   {
